aggiunta PriorityQueue